bug fix dark mode

--- a/css/contact.css
+++ b/css/contact.css
@@ -467,3 +467,38 @@ td {
 }
 
 /*/media*/
+
+
+/*butondarkmode*/
+body.dark-mode {
+  background-color: #121212;
+  color: white;
+}
+
+.dark-mode .navbar {
+  background-color: #1a1a1a !important;
+}
+
+.dark-mode .card {
+  background-color: #2c2c2c;
+  color: white;
+  border: 1px solid #444;
+}
+
+.dark-mode a {
+  color: #ffd700;
+}
+
+.dark-mode .btn {
+  border-color: #fff;
+  color: #fff;
+}
+
+.dark-mode footer {
+  background-color: #1a1a1a;
+  color: white;
+}
+
+
+
+/*/butondarkmode*/
